boreal/tests/assets/invalid_files/compilation/unauthorized_include.yar
// [disable includes]
rule a {
    condition: true
}

include "./valid.yar"
